# $Id$ $URL$

0.05:

bug fixes 

modules

better moduled sharing



0.04:

initial sharing support see examples/share.pl

passive mode autodetect by ips

writefile -> file_write
 openfile -> file_open

adc

adc hub

new new

tigerhash module

file sharing with sendfile

filelist create

