@@ -52,3 +52,11 @@ add finished file to share hashes and db
 
 
 search results via sqlite
+
+
+fix wait_clients array
+
+good named incoming clients
+
+
+
